environments/dev/apps/app-frontend/services/frontend/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: app-frontend
  name: frontend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
      app.kubernetes.io/part-of: app-frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: app-frontend
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:latest
        imagePullPolicy: Always
        name: frontend
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
