environments/dev/apps/app-frontend/services/frontend/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: app-frontend
  name: frontend
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: app-frontend
status:
  loadBalancer: {}
