environments/dev/apps/app-frontend/services/frontend/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: frontend
  namespace: dev
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
